Changelog
=========


2.0.5 (unreleased)
------------------

- Refactored and adjust the whole resolve/archive process.
  Issue #1525 Dossier abschliessen: Wieder eroeffnen bzw. wieder abschliessen bei Subdossier.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1525
  Issue #1546 DI-KSA: Fehlermeldung beim Versuch "Dossier abschliessen"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1546
  [phgross]

- Use the ISendableDocsContainer behavior instead of directly provide the interface.
  Issue #1568 Dokument aus Aufgabe versenden resp. kopieren
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1568
  [phgross]

- Added filingnumber and -year columns to the xls dossier reporter.
  Issue #1512 Auswahl exportieren: Sortieren nach Ablagenr. funktioniert nicht
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1512
  [phgross]

- Activate tabbedview quickupload plugin for dossiers.
  Issue #549 Abklaerung: Drag and drop
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/549
  [phgross]

- Adjust tests, because the accessors return utf-8 since the dexerity update.
  Issue #1420 Plone Version und Dexterity Version auf aktuellste Version heben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1420
  [phgross]

- User get_css_class instead of deprecated method: css_class_from_obj/css_class_from_brain
  [eschmutz]

- Add ordering for the contentmenu for dossiers and subdossiers
  [eschmutz]


2.0.4 (2012-03-28)
------------------

- Added filing number maintance view, wich provide some scripts and forms
  to maintain the different counters.
  [phgross]

- Change translations
  [ttschanz]


2.0.3 (2012-02-27)
------------------

- Added parent-dossier-finder adapter.
  [jone]

- Made view failsafe when there is no orig_template
  Issue #1398 DossierReporter: Fallback implementieren fuer MissingValues